# evolvers

./: .gitignore  .pre-commit-config.yaml  NOTICE  README.md  main.py  pyproject.toml  smoke_test_local.py
.github/workflows/: ci.yml  claude-code-review.yml  publish.yml
docs/: README.md  evolvers.mdx
examples/: bench_evaluator.py  main.py  smoke_test_local.py  with_lurkers.py
src/evolvers/: __init__.py  _logging.py  criterion.py  evolvable.py  llm.py
tests/: test_smoke.py
