[project]
name = "evolvers"
version = "0.1.0"
description = "Evolvable AI programs: define a function + criteria, let an LLM iteratively improve it"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Vladimir Sotnikov", email = "vladimir.s@alphakek.ai" },
]
keywords = ["llm", "ai", "agent", "evolutionary", "optimization", "dspy", "gepa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "pydantic>=2.7",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/tiramisu-sh/evolvers"
Repository = "https://github.com/tiramisu-sh/evolvers"
Issues = "https://github.com/tiramisu-sh/evolvers/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evolvers"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["evolvers"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
